--- a/angular.json
+++ b/angular.json
@@ -32,10 +32,12 @@
             "styles": [
               "src/styles.scss",
               "node_modules/bootstrap/scss/bootstrap.scss",
+              "node_modules/bootswatch/dist/united/bootstrap.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/jquery/dist/jquery.min.js"
             ],
             "server": "src/main.server.ts",
             "prerender": true,
